--- a/style.css
+++ b/style.css
@@ -4,12 +4,59 @@
     box-sizing: border-box;
 }
 
+
+body{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.rem;
+}
+
+header{
+    background-image: url('img/jumbo.png');
+    height: 600px;
+    background-size:cover;
+}
+
+ul{
+    list-style: none;
+}
+
+nav{
+    width: 60%;
+}
+
 .flex{
     display: flex;
 }
 
-main{
-    font-family: sans-serif;
+.conteiner{
+    max-width: 1170px;
+    margin: 0 auto;
 }
 
-header
+.upper{
+    align-items: center;
+    width: 100%;
+}
+
+.logo{
+    width: 20%;
+    padding: 1rem;
+}
+
+.text-white{
+    color: white;
+}
+
+nav ul{
+    justify-content: space-around;
+}
+
+section div.login{
+    text-align: right;
+}
+
+div input{
+    border: 0;
+    padding: 0.7rem;
+    border-radius: 15px;
+}
