--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1{
     display: flex;
 }
 
-.conteiner{
+.container{
     max-width: 1170px;
     margin: 0 auto;
 }
@@ -64,13 +64,12 @@ h1{
     margin-bottom: 30px;
 }
 
-.main-image{
-    width: 60%;
-
+.side-text{
+    width: 40%;
 }
 
-.side-test{
-    width: 40%;
+.padding{
+    padding: 2rem 4rem;
 }
 
 nav ul{
@@ -91,4 +90,3 @@ div input.black{
     color: white;
     margin-bottom: 50px;
 }
- 
