--- a/style.css
+++ b/style.css
@@ -73,6 +73,14 @@ h2{
     width: 40%;
 }
 
+.main-image{
+    width: 60%;
+}
+
+.image-size{
+    width: 100%;
+}
+
 .padding{
     padding: 2rem 4rem;
 }
